added all diagrams